--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mobile"
+        android:theme="@style/AppTheme"
         tools:targetApi="33">
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value="" />
+                android:value="로그인 화면" />
         </activity>
         <activity
             android:name=".SignUpActivity"
             android:label="회원가입 화면" >
+        </activity>
+        <activity
+            android:name=".SignUpCongratulationsActivity"
+            android:label="회원가입 성공화면" >
         </activity>
         <activity
             android:name=".FindIdActivity"
@@ -39,8 +49,13 @@
             android:name=".ResetPasswordActivity"
             android:label="비밀번호 찾기" >
         </activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name=".HomeActivity"
+            android:label="Home">
             <!-- 필요한 인텐트 필터 또는 설정 추가 -->
+        </activity>
+        <activity
+            android:name=".Register_plant"
+            android:label="식물 등록" >
         </activity>
         <!-- 아래의 receiver 요소를 추가합니다. -->
         <receiver
