--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,12 @@
             android:name=".Register_plant"
             android:label="식물 등록" >
         </activity>
+        <activity
+            android:name=".SensorRegisterList"
+            android:label="센서등록 목록">
+
+        </activity>
+
         <activity android:name=".SensorRegisterActivity">
             <!-- intent-filter 및 다른 설정 (선택 사항) -->
         </activity>
